--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Running tests...
-      - npm test || echo "Tests failed (optional step, continuing anyway)"
+      - npm test || echo "Tests failed (optional step, continuing anyways)"
 
   build:
     commands:
