--- a/appspec.yml
+++ b/appspec.yml
@@ -1,23 +1,10 @@
-version: 0.2
-
-phases:
-  install:
-    runtime-versions:
-      nodejs: 14
-    commands:
-      - echo Installing dependencies...
-      - npm ci
-
-  build:
-    commands:
-      - echo Building React app...
-      - npm run build
-      - echo Copying build files...
-      - cp -r build/ ./  # move build content up if needed
-
-artifacts:
-  files:
-    - appspec.yml
-    - scripts/**/*
-    - build/**/*
-  discard-paths: no
+version: 0.0
+os: linux
+files:
+  - source: /
+    destination: /home/ubuntu/Movix
+hooks:
+  AfterInstall:
+    - location: scripts/start_pm2.sh
+      timeout: 60
+      runas: ubuntu
